--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
   },
   "homepage": "https://github.com/djphan/ProjectC4",
   "dependencies": {
+    "config.json": "0.0.4",
     "express": "^4.12.3",
-    "express-params": "0.0.3",
-    "jade": "^1.9.2",
-    "mobile-detect": "^1.0.0",
     "mongoose": "^4.0.2"
   }
 }
