--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vows --spec"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "lodash": "^3.8.0",
     "method-override": "^2.3.2",
     "mongoose": "^3.8.27",
-    "node-restful": "^0.1.18"
+    "node-restful": "^0.1.18",
+    "vows": "^0.8.1"
   }
 }
