--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: node_js
 node_js:
   - "0.12"
 script: cd server && npm install && npm test
-
-
+notifications:
+  slack: c4esports:21P7CSERnatIlidGZFWl0Dgb
