--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
   },
   "homepage": "https://github.com/djphan/ProjectC4",
   "dependencies": {
+    "body-parser": "^1.13.2",
     "config.json": "0.0.4",
+    "cookie-parser": "^1.3.5",
     "express": "^4.12.3",
-    "mongoose": "^4.0.2"
+    "express-session": "^1.11.3",
+    "mongoose": "^4.0.2",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "passport-steam": "^0.1.5"
   }
 }
