--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/djphan/ProjectC4",
   "dependencies": {
+    "bcrypt": "^0.8.4",
     "body-parser": "^1.13.2",
     "config.json": "0.0.4",
     "cookie-parser": "^1.3.5",
