--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "esports",
     "collegiate"
   ],
-  "author": "Aedan Burnett, Riley Dawson, Riley Dawson, Daniel Phan, Kent Rasmussen, Tian Wang",
+  "author": "Aedan Burnett, Riley Dawson, Daniel Phan, Kent Rasmussen, Tian Wang",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/djphan/ProjectC4/issues"
