--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "config.json": "0.0.4",
     "cookie-parser": "^1.3.5",
     "express": "^4.12.3",
+    "express-flash": "0.0.2",
     "express-session": "^1.11.3",
     "mongoose": "^4.0.2",
     "passport": "^0.2.2",
