--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "0.12"
+services: mongodb
+before_script: npm setup
 script: npm test
 notifications:
   slack: c4esports:BMTmjLviPxybqXQZmmTVLhSK
