--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "0.12"
 services: mongodb
-before_script: npm setup
+before_script: npm run-script setup
 script: npm test
 notifications:
   slack: c4esports:BMTmjLviPxybqXQZmmTVLhSK
