--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Collegiate eSports Community",
   "main": "index.js",
   "scripts": {
-    "start": "sudo node index.js",
+    "start": "sudo node index.js"
   },
   "repository": {
     "type": "git",
