--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^0.8.4",
     "body-parser": "^1.13.2",
     "config.json": "0.0.4",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.12.3",
     "express-flash": "0.0.2",
