--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
     "config.json": "0.0.4",
     "express": "^4.12.3",
     "mongoose": "^4.0.2"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-force-task": "^1.0.0",
+    "grunt-mocha": "^0.4.13",
+    "mocha": "^2.3.2"
   }
 }
